Changelog
=========

3.0 - Unreleased
------------------

- Do manual splitting of filenames when indexing content. This allows searching
  for filenames. This previously did not work because the standard indexer strips
  dots, which does not work well for filenames.


2.5.1 - May 8, 2012
-------------------

- Package fix [aclark]

2.5 - May 8, 2012
-----------------

- Fixed broken imports for Plone 4.1 compatibility
  [swampmonkey]

- Make compatible with Plone 4/Zope 2.12 by removing z2-style interfaces
  and adjusting some imports
  [tom_gross]


2.4 - July 17, 2009
-------------------

- Disable recursive handling of AT references in reflectors: proxies
  filesystem data is never referenceable, so this only slowed things
  down.
  [wichert]

- Disable ownership fixing after adding reflector proxies. This prevents
  slow tree walks after copy/pasting reflectors.
  [wichert]

- Silence manage_after* deprecation warning.
  [wichert]


2.3 - June 19, 2009
-------------------

- Do no index filesystem data when running in life mode. This guarantees
  no stale data will be in the catalog.
  [wichert]

- Do not add trailing slash to file URLs in the folder contents view. This
  makes sure the base URL is correct, and relative paths in html files
  work correctly.
  [wichert]

- Move the file-specific mime type logic to the ReflectoFile class,
  and make the default implementation always return application/octet-stream.
  This fixes problems with indexing of directories.
  [wichert]


2.2 - April 16, 2009
--------------------

- Use the mimetypes_registry tool to find the content-type of a file,
  only falling back to the system mimetype registry if the tool can
  not identify the file.
  [wichert]
 
- Set the Content-Type header correctly for file downloads.
  [wichert]


2.1 - August 5, 2008
--------------------

- Return an empty list instead of raising an exception which triggers a
  site error when accessing a reflector which tries to use a path which does